<resources>
    <string name="app_name">Big Burger</string>
    <string name="title_activity_add_item">AddItemActivity</string>
    <string name="turkeyLira">₺</string>
    <string name="burger_list_title">Burger List</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="connectionError">Connection error, please try again later</string>
    <string name="thumbnail_desc">Thumbnail</string>
    <string name="title_activity_burger_details">BurgerDetailsActivity</string>
    <string name="item_hint">Add Instructions like (add more Onions, add more tomato, Coke diet&#8230;</string>
    <string name="add_item">Add an item</string>
    <string name="go_to_order">Go to order</string>
    <string name="continue_shopping">Continue adding items</string>
    <string name="item_added_message">Items added successfully, you can either go to make you order, or continue adding
        other items to your order
    </string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="current_order">Order Summary</string>
    <string name="subtotal">Subtotal</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="grand_total">Grand total</string>
    <string name="place_order">Place Order</string>
    <string name="complete_order">Click here to complete you Order</string>
    <string name="delete_order">delete order</string>
    <string name="delete_order_error">Could not delete Order, try again later</string>
    <string name="order_deleted">Order deleted successfully</string>
    <string name="delete_burger_error">Could not remove Item!!</string>
    <string name="count">Item count : %</string>
    <string name="tax">Tax</string>
    <string name="place_order_message">Placing your order require you to register with your address, so next step is to
        register, and pay or pay later, as you like, but for the exam matter, we will stop in this step, placing order
        will only delete current order
    </string>
    <string name="place_order_action">place order</string>
    <string name="cancel">Cancel</string>

</resources>
