<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="item" type="com.mavenuser.bigburger.model.BurgerSerializable"/>

        <variable name="itemDetailViewModel" type="com.mavenuser.bigburger.presentation.burgerDetails.ItemDetailViewModel"/>
    </data>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/detail_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorPrimary"
                    app:titleTextColor="@android:color/white"
                    app:title="@string/add_item"
                    tools:ignore="MissingConstraints"
            />

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:padding="5dp"
                          app:layout_constraintTop_toBottomOf="@id/detail_toolbar"
                          android:orientation="vertical">

                <ImageView
                        android:id="@+id/ivThumbnail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:adjustViewBounds="true"
                        android:src="@{item.thumbnail}"
                        android:contentDescription="@string/thumbnail_desc"/>

                <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minEms="2"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.WindowTitle"
                        android:textColor="@color/colorTitle"
                        tools:text="@{item.title}"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="5"
                        android:layout_gravity="center_vertical"
                        android:orientation="horizontal">
                    <TextView
                            android:id="@+id/tvPrice"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorTitle"
                            android:text="@{item.price}"
                            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                            android:layout_weight="2"/>

                    <LinearLayout android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:layout_weight="3">
                        <com.travijuu.numberpicker.library.NumberPicker
                                android:id="@+id/number_picker"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:min="1"
                                app:value="@{item.count}"
                                app:unit="1"
                                app:focusable="false"/>
                    </LinearLayout>


                </LinearLayout>
                <TextView
                        android:id="@+id/tvDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.SearchResult.Subtitle"
                        android:textColor="@color/colorSubtitle"
                        android:minEms="5"
                        tools:text="@{item.description}"/>
                <EditText
                        android:id="@+id/edInstruction"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="4"
                        android:textColor="@color/colorSubtitle"
                        android:text="@={item.instructions}"
                        android:hint="@string/item_hint"/>

                <Button
                        android:id="@+id/ivAddToCart"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:layout_margin="@dimen/fab_margin"
                        android:text="@string/add_to_cart"
                        android:focusable="true"
                        android:onClick="@{() -> itemDetailViewModel.updateOrInsertOrder(item)}"
                        android:textColor="@android:color/white"
                        android:background="@color/colorAccent"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>