<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="orderViewModel"
                  type="com.mavenuser.bigburger.presentation.order.OrderViewModel"/>
    </data>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/bl_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                app:title="@string/current_order"
                android:layout_alignParentTop="true"
                app:titleTextColor="@android:color/white"
                android:theme="?attr/actionBarTheme"/>


        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/bl_swipeRefreshLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bl_toolbar"
                app:setRefreshing="@{orderViewModel.loadingObservableBoolean}">

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/bl_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:adapter="@{orderViewModel}"/>


        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_centerInParent="true"
                android:visibility="@{orderViewModel.loadingObservableBoolean}"/>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:background="@color/colorAccentLight"
                      android:layout_alignParentBottom="true">

            <LinearLayout android:id="@+id/lySubtotal"
                          android:layout_width="match_parent"
                          android:weightSum="5"
                          android:layout_height="wrap_content"
                          android:layout_margin="@dimen/four_margin"
                          android:orientation="horizontal">
                <TextView
                        android:id="@+id/tvSubtotal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:minEms="2"
                        android:layout_weight="2"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.WindowTitle"
                        android:textColor="@android:color/white"
                        android:text="@string/subtotal"/>

                <TextView
                        android:id="@+id/tvSubtotalValue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:minEms="2"
                        android:gravity="right"
                        android:layout_weight="3"
                        android:text='@{"₺ " + orderViewModel.quotationObservableField.get().subTotal }'
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.WindowTitle"
                        android:textColor="@android:color/white"/>
            </LinearLayout>

            <LinearLayout android:id="@+id/lyDelivery"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:weightSum="5"
                          android:layout_margin="@dimen/four_margin"
                          android:orientation="horizontal">
                <TextView
                        android:id="@+id/tvDelivery"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:minEms="2"
                        android:layout_weight="2"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.WindowTitle"
                        android:textColor="@android:color/white"
                        android:text="@string/delivery_charge"/>

                <TextView
                        android:id="@+id/tvDeliveryValue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:minEms="2"
                        android:gravity="right"
                        android:layout_weight="3"
                        android:text='@{"₺ " + orderViewModel.quotationObservableField.get().delivary }'
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.WindowTitle"
                        android:textColor="@android:color/white"/>
            </LinearLayout>

            <View android:layout_width="match_parent"
                  android:layout_height="1dp"
                  android:background="@android:color/black"/>


            <LinearLayout android:id="@+id/lyTax"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:weightSum="5"
                          android:layout_margin="@dimen/four_margin"
                          android:orientation="horizontal">
                <TextView
                        android:id="@+id/tvTax"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:minEms="2"
                        android:layout_weight="2"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.WindowTitle"
                        android:textColor="@android:color/white"
                        android:text="@string/tax"/>

                <TextView
                        android:id="@+id/tvTaxValue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:minEms="2"
                        android:gravity="right"
                        android:layout_weight="3"
                        android:text='@{"₺ " + orderViewModel.quotationObservableField.get().tax }'
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.WindowTitle"
                        android:textColor="@android:color/white"/>
            </LinearLayout>

            <View android:layout_width="match_parent"
                  android:layout_height="1dp"
                  android:background="@android:color/black"/>

            <LinearLayout android:id="@+id/lyTotal"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:weightSum="5"
                          android:layout_margin="@dimen/four_margin"
                          android:orientation="horizontal">
                <TextView
                        android:id="@+id/tvTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minEms="2"
                        android:layout_weight="2"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.WindowTitle"
                        android:textColor="@android:color/white"
                        android:text="@string/grand_total"/>

                <TextView
                        android:id="@+id/tvTotalValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minEms="2"
                        android:gravity="right"
                        android:layout_weight="3"
                        android:text='@{"₺ " + orderViewModel.quotationObservableField.get().total}'
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.WindowTitle"
                        android:textColor="@android:color/white"/>
            </LinearLayout>

            <View android:layout_width="match_parent"
                  android:layout_height="1dp"
                  android:background="@android:color/black"/>

            <Button android:id="@+id/btnplaceorder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:text="@string/place_order"
                    android:textColor="@android:color/white"/>
        </LinearLayout>
    </RelativeLayout>

</layout>
